--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@mdx-js/rollup": "^3.0.1",
     "@next/mdx": "^14.2.3",
     "@types/mdx": "^2.0.13",
+    "dotenv": "^16.4.7",
+    "medium-sdk-ts": "^0.2.0",
     "next": "^14.2.3",
     "postcss": "^8.4.38",
     "react": "^18.2.0",
