--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
+    "axios": "^1.7.9",
     "medium-sdk-ts": "^0.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
